# VidNotes

./: Procfile  README.md  functions.py  main.py  pyproject.toml  requirements.txt  runtime.txt
static/: home.js
static/css/: 404.css  base.css  faq.css  footer.css  header.css  home.css  note.css
static/javascript/: home.js  note.js
templates/: 404.html  about.html  base.html  faq.html  footer.html  header.html  index.html  note.html
