[tool.poetry]
name = "repl_python3_TubeDex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
